--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,6 @@
-slogging.level.org.springframework.web=TRACE
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/socialmedia
-spring.datasource.username=root
-spring.datasource.password=987654
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+logging.level.org.springframework.web=TRACE
+spring.jpa.show-sql=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-spring.web.resources.static-locations=file:///C:/uploads/
+server.address=0.0.0.0
+spring.profiles.active=dev
